policies/gke/overlays/homelab/monitoring/http-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-routes
spec:
  parentRefs:
  - kind: Gateway
    name: asm-ingressgateway
    namespace: monitoring-ingress
  hostnames:
  - monitoring.homelab.alonge.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /prometheus
      backendRefs:
      - kind: Service
        name: prometheus-prometheus
        namespace: monitoring
        port: 9090
    - matches:
      - path:
          type: PathPrefix
          value: /kiali
      backendRefs:
      - kind: Service
        name: kiali
        namespace: monitoring
        port: 20001
