policies/gke/overlays/homelab/monitoring/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    istio.io/rev: asm-managed # enables managed mesh in the namespace

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
